package seleniumjavatpoint;

import org.openqa.selenium.WebDriver;

public class GoogleAboutPage extends BasePage{

    public GoogleAboutPage(WebDriver driver){
        super(driver);
    }

}
