@startuml

title __SELENIUMJAVATPOINT's Class Diagram__\n

  namespace seleniumjavatpoint {
    class seleniumjavatpoint.BasePage {
        # driver : WebDriver
        # we : WebElement
        + BasePage()
        + currentPageTitle()
    }
  }
  

  namespace seleniumjavatpoint {
    class seleniumjavatpoint.GoogleAboutPage {
        + GoogleAboutPage()
    }
  }
  

  namespace seleniumjavatpoint {
    class seleniumjavatpoint.GoogleMainPage {
        ~ wait : WebDriverWait
        - aboutLink : By
        {static} - googleUrl : String
        - homePageTab : String
        + GoogleMainPage()
        + navigateToAboutPage()
    }
  }
  

  seleniumjavatpoint.GoogleAboutPage -up-|> seleniumjavatpoint.BasePage
  seleniumjavatpoint.GoogleMainPage -up-|> seleniumjavatpoint.BasePage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
